objects/Equipment_Image__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Image__c</fullName>
        <label>Display Image</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Image_Brand__c</fullName>
        <label>Image Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Description__c</fullName>
        <formula>Model_Number__r.Material_Description__c</formula>
        <label>Image Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Type__c</fullName>
        <label>Image Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model Number</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Equipment Images</relationshipLabel>
        <relationshipName>Equipment_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Equipment Image</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Image_Type__c</columns>
        <columns>NAME</columns>
        <columns>Image_Brand__c</columns>
        <columns>Image_Description__c</columns>
        <columns>Model_Number__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>EI-{00000}</displayFormat>
        <label>Equipment Image Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>